[package]
name = "yapl"
version = "0.1.0"
authors = ["DavidPRolfe <david.p.rolfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yapl"

[env]
RUST_BACKTRACE = 1

[dependencies]
snafu = "0.7.4"
utf8-decode = "1.0.0"